--- a/vlogQC/index.html
+++ b/vlogQC/index.html
@@ -84,7 +84,7 @@
                             </div>
 
                             <div class="card card-custom p-4">
-                                <label class="form-label fw-bold">选择目录</label>
+                                <label class="form-label fw-bold">选择目录（路径选择至IDXXX）</label>
                                 <div class="input-group">
                                     <button class="btn btn-secondary" @click="handleBrowse" :disabled="scanning">
                                         <span v-if="browsing" class="spinner"></span> 📂浏览文件夹
@@ -143,7 +143,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <h6 class="text-muted">各文件夹详情:</h6>
+                                        <h6 class="text-muted">各文件夹详情(检测版本号v2.2)：</h6>
                                         <div class="table-responsive" style="max-height: 200px;">
                                             <table class="table table-sm table-hover mb-0">
                                                 <thead class="table-light">
