--- a/Timer/index.html
+++ b/Timer/index.html
@@ -160,6 +160,9 @@
                 <button id="btn-reset">Reset</button>
                 <button id="btn-set">Set</button>
                 <button id="btn-fullscreen">Fullscreen</button>
+                <button id="btn-toggle-connect">跨设备</button>
+                <input type="text" id="room-id" placeholder="房间号" style="width:120px">
+                <button id="btn-auto-connect">自动连接</button>
             </div>
             <div id="status"></div>
         </div>
@@ -193,6 +196,8 @@
         let dc = null;
         let pcIceDone = false;
         let pendingCandidates = [];
+        const roomInput = document.getElementById('room-id');
+        const btnAutoConnect = document.getElementById('btn-auto-connect');
 
         // --- Initialization ---
         function init() {
@@ -222,6 +227,27 @@
             fitTimerToWidth();
             broadcastStatus();
             initWebRTCUI();
+            // Default room from URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const rid = urlParams.get('room') || '';
+            const encodedOffer = urlParams.get('offer') || '';
+            if (rid) roomInput.value = rid;
+            if (!roomInput.value) roomInput.value = Math.random().toString().slice(2,8);
+            btnAutoConnect.addEventListener('click', autoConnectAnswerer);
+            // Auto-connect if room provided via URL
+            if (rid) setTimeout(autoConnectAnswerer, 0);
+            // 若 URL 携带 Offer，自动填充并尝试连接
+            if (encodedOffer) {
+                try {
+                    const offer = JSON.parse(atob(decodeURIComponent(encodedOffer)));
+                    document.getElementById('offer-input').value = JSON.stringify(offer);
+                    setTimeout(() => {
+                        document.getElementById('btn-accept-offer').click();
+                    }, 0);
+                } catch(e){
+                    statusLabel.textContent = 'URL Offer 解析失败';
+                }
+            }
         }
 
         // --- Logic ---
@@ -530,6 +556,7 @@
         function initWebRTCUI() {
             const connectDiv = document.createElement('div');
             connectDiv.id = 'connect';
+            connectDiv.style.display = 'none'; // Default to hidden
             connectDiv.innerHTML = [
                 `<div style='font-size:1.2rem'>跨设备连接 <span id="connection-status" style="font-weight:normal;padding-left:10px;"></span></div>`,
                 "<div style='display:flex;flex-wrap:wrap;gap:10px'>",
@@ -549,7 +576,7 @@
                 connectionStatus.textContent = text;
                 connectionStatus.style.color = color;
             }
-
+ 
             document.getElementById('btn-accept-offer').addEventListener('click', async function() {
                 const text = document.getElementById('offer-input').value.trim();
                 if (!text) return;
@@ -558,6 +585,99 @@
                     await setupPeerAsAnswerer(text, setConnectionStatus);
                 } catch(e) {
                     setConnectionStatus("连接失败", "#FF6666");
+                }
+            });
+
+            document.getElementById('btn-toggle-connect').addEventListener('click', () => {
+                connectDiv.style.display = connectDiv.style.display === 'none' ? 'flex' : 'none';
+            });
+        }
+        function signalBase(){
+            const host = window.location.hostname;
+            return `http://${host}:5001`;
+        }
+        async function postJSON(path, body){
+            const rid = roomInput.value.trim();
+            const res = await fetch(`${signalBase()}${path}?room=${encodeURIComponent(rid)}`,{
+                method:'POST',
+                headers:{'Content-Type':'application/json'},
+                body: JSON.stringify(body||{})
+            });
+            if(!res.ok) throw new Error('network');
+            return res.json().catch(()=>({}));
+        }
+        function subscribeEvents(handler){
+            const rid = roomInput.value.trim();
+            let stopped = false;
+            const poll = async () => {
+                if (stopped) return;
+                try{
+                    const res = await fetch(`${signalBase()}/poll?room=${encodeURIComponent(rid)}&type=offer`, {cache:'no-store'});
+                    if(res.ok){
+                        const json = await res.json().catch(()=>({}));
+                        if(json && !json.empty){
+                            handler('offer', json);
+                            stopped = true;
+                            return;
+                        }
+                    }
+                }catch(_){}
+                setTimeout(poll, 1500);
+            };
+            poll();
+            return { stop(){ stopped = true; } };
+        }
+        async function autoConnectAnswerer(){
+            const rid = roomInput.value.trim();
+            if(!rid){ statusLabel.textContent = '请填写房间号'; return; }
+            const connectionStatus = document.getElementById('connection-status');
+            function setConnectionStatus(text, color) {
+                if (!connectionStatus) return;
+                connectionStatus.textContent = text;
+                connectionStatus.style.color = color;
+            }
+            subscribeEvents(async (type, payload)=>{
+                if(type==='offer'){
+                    try{
+                        pc = new RTCPeerConnection({iceServers:[{urls:'stun:stun.l.google.com:19302'}]});
+                        pc.oniceconnectionstatechange = e => {
+                            switch(pc.iceConnectionState) {
+                                case "connecting": setConnectionStatus("连接中...", "#66ccff"); break;
+                                case "connected": setConnectionStatus("已连接", "#00FF88"); break;
+                                case "failed": setConnectionStatus("连接失败", "#FF6666"); break;
+                                case "disconnected": setConnectionStatus("连接断开", "#FF6666"); break;
+                                case "closed": setConnectionStatus("连接关闭", "#888"); break;
+                                default: setConnectionStatus(pc.iceConnectionState, "#888"); break;
+                            }
+                        };
+                        pc.ondatachannel = function(ev) {
+                            dc = ev.channel;
+                            dc.onmessage = function(ev) {
+                                try {
+                                    const msg = JSON.parse(ev.data);
+                                    if (msg.type === 'command') {
+                                        if (msg.cmd === 'set' && typeof msg.value === 'number') {
+                                            timeInput.value = formatSeconds(msg.value);
+                                            setTimer();
+                                        } else if (msg.cmd === 'start') {
+                                            if (!timerRunning) toggleTimer();
+                                        } else if (msg.cmd === 'pause') {
+                                            if (timerRunning) toggleTimer();
+                                        } else if (msg.cmd === 'reset') {
+                                            resetTimer();
+                                        }
+                                    }
+                                } catch(e) {}
+                            };
+                        };
+                        await pc.setRemoteDescription(payload);
+                        const answer = await pc.createAnswer();
+                        await pc.setLocalDescription(answer);
+                        await postJSON('/answer', pc.localDescription);
+                        setConnectionStatus('Answer 已发布，等待连接', '#888');
+                    }catch(e){
+                        setConnectionStatus('自动连接失败', '#FF6666');
+                    }
                 }
             });
         }
@@ -600,8 +720,12 @@
             };
             pc.onicecandidate = function(ev) {
                 if (!ev.candidate) {
-                    document.getElementById('answer-output').value = JSON.stringify(pc.localDescription);
-                    setConnectionStatus('Answer 已生成，请复制', '#888');
+                    const answer = pc.localDescription;
+                    document.getElementById('answer-output').value = JSON.stringify(answer);
+                    // 生成 Answer 分享链接（可选）
+                    const encoded = encodeURIComponent(btoa(JSON.stringify(answer)));
+                    const shareUrl = `${window.location.origin}/Timer/control.html?answer=${encoded}`;
+                    setConnectionStatus('Answer 已生成，请复制或扫码分享', '#888');
                 }
             };
             const offer = JSON.parse(offerText);
