--- a/vlogQC/index.html
+++ b/vlogQC/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>视频质量检测系统v2.1</title>
+    <title>视频质量检测系统v2.3</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
@@ -65,7 +65,7 @@
         <div class="container-fluid p-0">
             <div class="row g-0">
                 <div class="col-md-2 sidebar">
-                    <h5 class="text-center mb-4"><i class="bi bi-film"></i> 视频检测系统v2.1</h5>
+                    <h5 class="text-center mb-4"><i class="bi bi-film"></i> 视频检测系统v2.3</h5>
                     <div class="text-center mb-4 text-white-50 small">
                         <i class="bi bi-person-circle fs-4 mb-1 d-block text-white"></i>
                         <div class="badge bg-secondary mt-1">{{ mode === 'single' ? '单用户模式' : '多用户模式' }}</div>
@@ -84,12 +84,12 @@
                             </div>
 
                             <div class="card card-custom p-4">
-                                <label class="form-label fw-bold">选择目录（路径选择至IDXXX）</label>
+                                <label class="form-label fw-bold">选择用户ID文件夹（如：IDXXX，请勿选择“IDXXX-日期”文件夹）</label>
                                 <div class="input-group">
                                     <button class="btn btn-secondary" @click="handleBrowse" :disabled="scanning">
                                         <span v-if="browsing" class="spinner"></span> 📂浏览文件夹
                                     </button>
-                                    <input type="text" v-model="pickedPath" class="form-control bg-white" placeholder="请选择文件夹..." readonly>
+                                    <input type="text" v-model="pickedPath" class="form-control bg-white" placeholder="请选择用户ID文件夹（如：ID001）" readonly>
                                     <button class="btn btn-primary px-5 fw-bold" @click="startScan" :disabled="scanning || !pickedPath">
                                         <span v-if="scanning" class="spinner"></span> 
                                         <i class="bi bi-search"></i> 开始检测
@@ -143,7 +143,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <h6 class="text-muted">各文件夹详情(检测版本号v2.2)：</h6>
+                                        <h6 class="text-muted">各文件夹详情(检测版本号v2.3)：</h6>
                                         <div class="table-responsive" style="max-height: 200px;">
                                             <table class="table table-sm table-hover mb-0">
                                                 <thead class="table-light">
@@ -346,13 +346,21 @@ createApp({
             try {
                 browsing.value = true;
                 currentDirHandle = await window.showDirectoryPicker();
-                pickedPath.value = currentDirHandle.name;
+                const name = currentDirHandle.name;
+                // 禁止选择带“-”的文件夹（如 ID001-251201）
+                if (name.includes('-')) {
+                    alert('请勿选择“ID-日期”子文件夹，请返回上一级选择用户ID文件夹（如：ID001）');
+                    currentDirHandle = null;
+                    pickedPath.value = '';
+                    return;
+                }
+                pickedPath.value = name;
             } catch (e) { console.warn("Browse cancelled"); }
             finally { browsing.value = false; }
         };
 
         const startScan = async () => {
-            if(!currentDirHandle) return alert("请先选择文件夹");
+            if(!currentDirHandle) return alert("请先选择用户ID文件夹（如：ID001）");
             
             scanning.value = true;
             showResult.value = false;
